# rs_kis_server

./: .gitignore  CLAUDE.md  README.md
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  dual_client.rs  error.rs  fomc_calendar.rs  lib.rs  main.rs  notion.rs  regime.rs  run.rs  run_generic.rs  state.rs  strategy.rs  types.rs
crates/server/src/control/: kill_switch.rs  mod.rs  recovery.rs
crates/server/src/db/: mod.rs
crates/server/src/db/migrations/: 0001_initial.sql  0002_orders_atr.sql  0003_positions_exchange_code.sql  0004_orders_exchange_code.sql  0005_daily_ohlc.sql  0006_add_name_to_daily_ohlc.sql  0007_signal_log_direction_check.sql  0008_realized_pnl.sql  0009_orders_filled_price.sql  0010_holding_type.sql  (+2 more)
crates/server/src/execution/: mod.rs  order_state.rs
crates/server/src/market/: adapter.rs  kr.rs  mod.rs  types.rs  us.rs
crates/server/src/monitoring/: alert.rs  mod.rs  strategy_monitor.rs
crates/server/src/pipeline/: execution.rs  generic_execution.rs  generic_position.rs  generic_regime.rs  mod.rs  position.rs  regime.rs  review.rs  scheduler.rs  signal.rs  stream.rs  tick.rs  tuner.rs
crates/server/src/position/: mod.rs
crates/server/src/qualification/: mod.rs  setup_score.rs
crates/server/src/shared/: activity.rs  control.rs  logging.rs  mod.rs  rest.rs  telegram.rs  throttler.rs  token.rs
crates/server/tests/: concurrency.rs  test_alert.rs  test_bot_shutdown.rs  test_config.rs  test_db.rs  test_error.rs  test_kill_switch.rs  test_monitoring.rs  test_order_state.rs  test_position.rs  test_recovery.rs  test_types.rs
(+5 files in other folders)
