[package]
name = "kis_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "kis_server"
path = "src/lib.rs"

[[bin]]
name = "kis_server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
shellexpand = "3"
rand = "0.8"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
teloxide = { version = "0.13", features = ["macros"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
socket2 = "0.6"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
kis_api = { path = "../../../rs_kis/crates/kis_api" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
kis_api = { path = "../../../rs_kis/crates/kis_api" }
tempfile = "3"
axum-test = "19"
